kube-config/serverless-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: serverless-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      terminationGracePeriodSeconds: 900
      containers:
        - name: api-gateway
          image: serverless-poc-api-gateway:latest
          imagePullPolicy: IfNotPresent
          command: [ "uvicorn", "api_gateway:app", "--host", "0.0.0.0", "--port", "8000" ]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: logs-volume
              mountPath: "/mnt/logs"
          resources:
            requests:
              memory: "256Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.5"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: serverless-poc
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
